--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list">
-          <li class="header__links-list-item_no-bullit header__link_active">
-            <a class="header__link">главная</a>
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a class="header__link header__link_active">главная</a>
           </li>
           <li class="header__links-list-item">
             <a class="header__link" href="#0">посмотреть лоты</a>
@@ -50,7 +50,7 @@
             <p class="cover__description-text">
               Аукцион вещей, в которые никто не верил
             </p>
-            <button class="bet-button">Сделать ставку</button>
+            <button  type="button" class="bet-button">Сделать ставку</button>
           </div>
         </div>
       </section>
@@ -69,11 +69,6 @@
                   <p class="card__text">
                     Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
                   </p>
-                  <img
-                    src="images/card-lot-01.jpg"
-                    alt="Фотография, лето"
-                    class="card-img"
-                  />
                 </article>
               </a>
             </div>
@@ -88,11 +83,6 @@
                   <p class="card__text">
                     Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
                   </p>
-                  <img
-                    src="images/card-lot-02.jpg"
-                    alt="Изображение обложки книги"
-                    class="card-img"
-                  />
                 </article>
               </a>
             </div>
@@ -107,11 +97,6 @@
                   <p class="card__text">
                     Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
                   </p>
-                  <img
-                    src="images/card-lot-03.jpg"
-                    alt="Изображение картины 'Черное и фиолетовое' Василия Кандинского"
-                    class="card-img"
-                  />
                 </article>
               </a>
             </div>
