--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
           Лоты
         </h2>
         <ul class="lots__card-list">
-          <li class="lots__card-list-item">
+          <li class="lots__card-list-item card_type_film">
             <div class="overlay">
               <a class="card-link" href="#0">
-                <article class="card card_type_film">
+                <article class="card">
                   <h3 class="card__title">
                     Фильм режиссёра, который бросил киношколу
                   </h3>
@@ -73,10 +73,10 @@
               </a>
             </div>
           </li>
-          <li class="lots__card-list-item">
+          <li class="lots__card-list-item card_type_book">
             <div class="overlay">
               <a class="card-link" href="#0">
-                <article class="card card_type_book">
+                <article class="card">
                   <h3 class="card__title">
                     Книга, где описан один скучный день из жизни рекламного агента
                   </h3>
@@ -87,10 +87,10 @@
               </a>
             </div>
           </li>
-          <li class="lots__card-list-item">
+          <li class="lots__card-list-item card_type_picture">
             <div class="overlay">
               <a class="card-link" href="#0">
-                <article class="card card_type_picture">
+                <article class="card">
                   <h3 class="card__title">
                     Картина, которую повторит даже 5-летний сын маминой подруги
                   </h3>
